# imas_cg_api

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.devcontainer/sql/: create_table.sql
api/: module.py  response.py  settings.py  urls.py  wsgi.py
api/cartoon/: serializer.py  urls.py  views.py
api/idol/: pagination.py  serializer.py  urls.py  views.py
api/idol_name/: urls.py  views.py
api/settings/: __init__.py  base.py  default.py  docker.py
api/skill/: serializer.py  urls.py  views.py
data/: admin.py  models.py
docker/: docker-compose.yml
docker/app/: Dockerfile  requirements.txt
docker/db/: Dockerfile  MariaDB.repo  docker-entrypoint.sh
sql/: create_table.sql
