[tool.poetry]
name = "imas_cg_api"
version = "0.1.0"
description = "THE IDOLM@STER CINDERELLA GIRLS IDOL DATA API"
authors = ["Mutsuki Kimuraya <sondessein@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0.2"
django-cors-headers = "^3.2.1"
djangorestframework = "^3.11.0"
mysqlclient = "^1.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
